learn-terraform-aws-instance/internetGateway.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.TrainingVPC.id

  tags = {
    Name = "TrainingIGW"
  }
}
